fix dish count column align

--- a/src/pages/Order/index.scss
+++ b/src/pages/Order/index.scss
@@ -80,8 +80,10 @@
             &.bill-item-current {
               background: #c6daf6;
             }
+
             .bill-name {
-              flex: 1;
+              // flex: 1;
+              flex-basis: 140px;
               > div:first-of-type {
                 font-weight: bold;
               }
@@ -95,7 +97,9 @@
               color: #999;
             }
             .count {
+              // flex: 1;
               flex-basis: 50px;
+              text-align: right;
             }
             .price {
               flex-basis: 80px;
@@ -106,6 +110,9 @@
                 text-decoration: line-through;
               }
             }
+            // div:nth-of-type(1) {
+            //   // flex-basis: 140px;
+            // }
           }
         }
       }
